1999-01-14  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Fix spelling mistake in generated file, which
	prevented the Task_Pool attribute from working.

1999-01-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_check.adb: Final fix for 6023-G01. Set filename info back to
 	zero.

1999-01-03  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_check.adb: Deallocate ali test buffer once scanned. Part of
	fix for 6023-G01. Remove typo.

1998-12-08  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Change stub generation because one of the Garlic
 	subprograms has changed of profile.

1998-10-23  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_lead.adb: Generate at run-time a default boot server address
	when Starter is a shell script.

1998-10-16  Samuel Tardieu  <sam@inf.enst.fr>

	* All files: update headers.

1998-10-15  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Fix stub generation for SP units. Use the body
	file when it exits to generate a SP caller stub (cxe2001).

1998-10-14  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Qualify Free procedure so that it doesn't clash
	with GNAT 3.12w GNAT.OS_Lib.Free.

1998-10-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_back.adb, xe_back.ads: New function Is_RCI_Or_SP_unit.

	* xe_check.adb: Substitute any access to Units.Table (U).RCI by
	Is_RCI_Or_SP_Unit in order to handle SP units the same way we
	handle RCI units.

	* xe_stubs.adb: Same as above. Modify Callers table which now
	stores unit ids rather than unit names. Modify call to Check to
	take new parameter RCI into account.

1998-10-05  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_lead.adb: Use correct file name for Ada starter. Checked in
	for Pascal Obry.

1998-09-24  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Use -s for linking to strip an executable rather
	than calling Execute_Strip.

	* xe_utils.ads, xe_utils.adb: Remove procedure Execute_Strip since 
	we do now stripping using the -s flag (strip does not work well on 