@@ -1,3 +1,8 @@
+1999-01-20  Laurent Pautet  <pautet@scapin.enst.fr>
+
+	* xe_utils.adb: Use GLADE_LIBRARY_DIR env. var. to search GARLIC
+	lib. This enhancement allows binary release.
+
 1999-01-14  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* xe_stubs.adb: Fix spelling mistake in generated file, which
